97388 Duplicate entries in Update Manger when using *.link files